--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,9 @@
 .container {
   min-height: 100vh;
-  padding: 0 0;
+  width: 100%;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
   background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
 }
 
