updated positioning after logging in

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -35,6 +35,8 @@
   margin-right: 1rem;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+  min-width: 300px;
 }
 
 /* Keeping this for reference but it's not used anymore */
