changed connect wallet to be more clean and simple.

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -36,7 +36,8 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  min-width: 300px;
+  min-width: 320px;
+  gap: 0.5rem;
 }
 
 /* Keeping this for reference but it's not used anymore */
