--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,17 +7,20 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Space Grotesk', sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Space Grotesk', sans-serif;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: #ffffff;
+  font-family: 'Space Grotesk', sans-serif;
 }
 
 /* Custom Modal Styles */
