--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -10,6 +10,17 @@
     flex-direction: column;
   }
   
+  .particlesContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events: none;
+    background: linear-gradient(to bottom, #ffffff, #f8f9ff);
+  }
+  
   .backgroundVideo {
     position: absolute;
     top: 0;
